--- a/eu.dariolucia.reatmetric.driver.httpserver/src/main/resources/mimic.html
+++ b/eu.dariolucia.reatmetric.driver.httpserver/src/main/resources/mimic.html
@@ -69,7 +69,7 @@
     async function loadSVG(){
         if(mimicController === null) {
             mimicController = factoryObj.newMimic(
-                'ext/station.svg',
+                'ext/station2.svg',
                 document.getElementById("div1"),
                 ["raw", "eng", "alarm", "validity"]);
             await mimicController.initialise();
