Raw Data HTTP interface implementation

--- a/eu.dariolucia.reatmetric.driver.httpserver/src/main/resources/chart.html
+++ b/eu.dariolucia.reatmetric.driver.httpserver/src/main/resources/chart.html
@@ -25,7 +25,7 @@
       };
 
     // Reatmetric objects
-    var reatmetric = new ReatMetric('127.0.0.1',8081,'Test System');
+    var reatmetric = new ReatMetric('http://127.0.0.1:8081','Test System');
     var subParamKey = null;
     var subIntervalId = null;
 
