--- a/eu.dariolucia.reatmetric.driver.httpserver/src/main/resources/mimic.html
+++ b/eu.dariolucia.reatmetric.driver.httpserver/src/main/resources/mimic.html
@@ -10,7 +10,7 @@
     var factoryObj = new RtmtMimics(document);
 
     // Reatmetric objects
-    var reatmetric = new ReatMetric('127.0.0.1',8081,'Test System');
+    var reatmetric = new ReatMetric('http://127.0.0.1:8081','Test System');
     var subParamKey = null;
     var subIntervalId = null;
 
