--- a/eu.dariolucia.reatmetric.driver.httpserver/src/main/resources/reatmetric.html
+++ b/eu.dariolucia.reatmetric.driver.httpserver/src/main/resources/reatmetric.html
@@ -3,7 +3,7 @@
         <script type="text/javascript" src="reatmetric.js">
         </script>
         <script type="text/javascript">
-    var reatmetric = new ReatMetric('127.0.0.1',8081,'Test System');
+    var reatmetric = new ReatMetric('http://127.0.0.1:8081','Test System');
     var subEvtKey = null;
     var subParamKey = null;
     var subMsgKey = null;
